--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apiai": "^4.0.3",
     "body-parser": "^1.18.2",
+    "curl": "^0.1.4",
     "express": "^4.16.2",
     "pg": "^7.4.1",
     "request": "^2.83.0"
